--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -466,8 +466,8 @@ span.radio.inline {
     border-bottom: 2px solid #ec6952;
   }
   li {
-    font-size: 16px;
     margin: 5px 0px;
+    font-family: 'Lato', sans-serif;
   }
   p {
     font-size: 17px;
