--- a/app/views/filmster_lessons/lessons/lesson_10.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_10.html.erb
@@ -24,4 +24,5 @@ t.string :username, unique: true
     <li>Add <code>username</code> and <code>introduction</code> field to "Edit User" form</li>
     <li>Make sure the forms work and the attributes are saved into the database correctly (if they are not, check that your strong parameters are setup correctly)</li>
   </ul>
+  <li>Add a link to "Edit Profile" on the navigation bar</li>
 </ul>
