--- a/app/views/filmster_lessons/lessons/lesson_12.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_12.html.erb
@@ -1,6 +1,6 @@
 <h2>Tasks</h2>
 
 <ul>
-  <li>Install RSpec</li>
-  <li>Install FactoryGirl</li>
+  <li>Choose a font to use in the web application</li>
+  <li>Install it in your application</li>
 </ul> 
