--- a/app/views/filmster_lessons/lessons/lesson_13.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_13.html.erb
@@ -10,6 +10,11 @@
   Next, watch this video as I walkthrough how to make a simple request to the API.
 </p>
 
+<!-- 16:9 aspect ratio -->
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/DUz0RVDsImc" frameborder="0" allowfullscreen></iframe>
+</div>
+
 <p>
   Right now, we are using the browser to send a GET request to the API. In the next lesson, we are going to look at how to use JavaScript and AJAX to perform a GET request to the API.
 </p>
