--- a/app/views/filmster_lessons/lessons/lesson_17.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_17.html.erb
@@ -3,13 +3,13 @@
 </p>
 
 <p>
-  Let's build a feature so that users can post reviews to the movies they've watched.
+  <strong>Let's build a feature so that users can post reviews to the movies they've watched.</strong>
 </p>
 
 <h2>Our Strategy</h2>
 
 <p>
-  In order to save the reviews the users post and tie them with a movie, we need to store the movie in the database as well. Here's what we are going to do:
+  <strong>In order to save the reviews the users post and tie them with a movie, we need to store the movie in the database as well.</strong> Here's what we are going to do:
 </p>  
 
 <ul>
