--- a/app/views/filmster_lessons/lessons/lesson_21.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_21.html.erb
@@ -23,7 +23,7 @@
 </ul>
 
 <p>
-  For this task, you'll encounter several bugs as you go along. Try to Google for solutions, as the bugs you encounter were probably encountered by other developers in the past as well.
+  <Strong>For this task, you'll encounter several bugs as you go along.</strong> Try to Google for solutions, as the bugs you encounter were probably encountered by other developers in the past as well. The point of this lesson is to train you to solve your own problems.
 </p>
 
 <p>
