--- a/app/views/filmster_lessons/lessons/lesson_22.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_22.html.erb
@@ -10,6 +10,7 @@
   <ul>
     <li>Make sure you are using eager loading to prevent the N+1 problem</li>
   </ul>
+  <li>Create a <code>show.html.erb</code> page</li>
   <li>Setup the routes for the <code>show</code> action</li>
 </ul>
 
@@ -52,7 +53,7 @@
 &lt;p class="text-center lead"&gt;&lt;%= @user.introduction %&gt;&lt;/p&gt;
 </code></pre>
 
-<p>
+<p class="alert alert-info">
   <code>lead</code> is a CSS class defined by Bootstrap by default.
 </p>
 
@@ -74,7 +75,7 @@
 </code></pre>
 
 <p>
-  Inside your <code>users.scss</code> file, let's define the CSS for the HTML above:
+  Inside your <code>users.scss</code> file, let's define the CSS for the HTML above using SASS:
 </p>
 
 <pre><code class="css">
@@ -110,7 +111,7 @@
 <h2>Displaying the reviews posted by the user</h2>
 
 <p>
-  The next step is to display the reviews posted by the user. 
+  <Strong>The next step is to display the reviews posted by the user.</strong>
 </p>
 
 <p>
