--- a/app/views/filmster_lessons/lessons/lesson_7.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_7.html.erb
@@ -1,6 +1,8 @@
 <h2>Tasks</h2>
 
 <ul>
-  <li>Create a static page and display "Hello World"</li>
+  <li>Create a <code>StaticPages</code> controller and an <code>index</code> method</li>
   <li>This page should be set to the root of the application</li>
+  <li>Create an <code>index.html.erb</code> file and display "Hello World"</li>
+  <li>Start up the server and check to see if everything is working</li>
 </ul>
