--- a/app/views/filmster_lessons/lessons/lesson_8.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_8.html.erb
@@ -2,5 +2,8 @@
 
 <ul>
   <li>Set up a navigation bar</li>
-  <li>Content can be added in later</li>
+  <li>Links to add (other links will be added later):</li>
+  <ul>
+    <li>Site Title</li>    
+  </ul>
 </ul>
