--- a/app/views/filmster_lessons/lessons/lesson_11.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_11.html.erb
@@ -9,5 +9,5 @@
   </ul>
 
   <li>Add a <code>avatar</code> form input in the "Edit User" page</li>  
-  <li>Configure Devise strong parameters to accept <code>avatar</code> as a paramter</li>
+  <li>Configure Devise strong parameters to accept <code>avatar</code> as a parameter</li>
 </ul>
