--- a/app/views/filmster_lessons/lessons/lesson_23.html.erb
+++ b/app/views/filmster_lessons/lessons/lesson_23.html.erb
@@ -14,7 +14,19 @@
   This is called a <strong>join table</strong>. Join tables are tables that store the <code>id</code> of two different tables. We can use the join table to fetch the users that a user follows, or the users that the user is followed by. We will get to this later on in the lesson.
 </p>
 
+<p>
+  <strong>Here's what the database relationship will look like:</strong>
+</p>
+
 <%= image_tag 'filmster/relationship_model.png', class: 'img-responsive screenshot' %>
+
+<p>
+  The <code>Relationship</code> stores a <code>follower_id</code>, which is the <code>id</code> of the <code>User</code> that is a <em>follower</em>. It also stores a <code>followed_id</code>, which is the <code>id</code> of the <code>User</code> that is <em>being followed</em>.
+</p>
+
+<p>
+  <strong>For example, if Mark Zuckerburg follows Steve Jobs, Mark's user id will be stored as <code>follower_id</code>, and Steve's user id will be stored as <code>followed_id</code>.</strong>
+</p>  
 
 <p>
   Let's generate our <code>relationship</code> model.
